--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.group.p2_socializer/com.group.p2_socializer.Main</mainClass>
+                            <mainClass>com.group.p2_socializer/com.group.p2_socializer.Socializer</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
