--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,5 @@ buildNumber.properties
 .classpath
 
 # End of https://www.toptal.com/developers/gitignore/api/java,intellij,maven,macos
+/.mvn/
+/
