--- a/.gitignore
+++ b/.gitignore
@@ -211,4 +211,8 @@ buildNumber.properties
 
 # End of https://www.toptal.com/developers/gitignore/api/java,intellij,maven,macos
 /.mvn/
-/
+
+/.idea/encodings.xml
+/.idea/jarRepositories.xml
+/.idea/misc.xml
+/.idea/vcs.xml
